# adsnarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
contracts/: TestContract.sol
keys/: signature
keys/ethsnarks/: proof.json  vk.json
migrations/: 2_deploy_contracts.js
src/: CMakeLists.txt  generator.cpp  main.cpp  oracle_gadget.hpp  oracle_protoboard.cpp  prover.cpp  utils.cpp  verifier.cpp
src/circuit/: median_gadget.cpp  median_gadget.hpp  oracle_gadget.cpp  oracle_gadget.hpp  oracle_protoboard.cpp  oracle_protoboard.hpp
src/eddsa/: convert.py  generate.py  keypair.py  sign.py  verify.py
test/: TestEddsa.js  TestEndToEnd.js  TestVerifier.js  TestVerifier.sol  utils.js
